Refactor long paths configuration in build workflow
Removed duplicate long paths configuration step and moved it to a new position.

--- a/.github/workflows/build-contribs.yml
+++ b/.github/workflows/build-contribs.yml
@@ -18,14 +18,17 @@ jobs:
       # -----------------------------------------------------------------------
       # 1. Checkout
       # -----------------------------------------------------------------------
+
+      - name: Enable long paths (system)
+        shell: powershell
+        run: |
+          git config --system core.longpaths true
+          git config --global core.longpaths true
+      
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           path: Trunk2016
-
-      - name: Enable long paths (system)
-        shell: powershell
-        run: git config --system core.longpaths true
 
       # -----------------------------------------------------------------------
       # 2. Restore cache — skip everything if contribs are already cached
