--- a/.github/workflows/build-contribs.yml
+++ b/.github/workflows/build-contribs.yml
@@ -66,15 +66,19 @@ jobs:
       # -----------------------------------------------------------------------
       # 6. Build OpenSSL 1.0.0c
       #    Must come before Curl since curl links against it.
-      # -----------------------------------------------------------------------
+      # -----------------------------------------------------------------------    
+      - uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x86
+    
       - name: Build OpenSSL
         if: steps.cache-contribs.outputs.cache-hit != 'true'
         shell: cmd
         run: |
-          call "C:\Program Files (x86)\Microsoft Visual Studio 11.0\VC\vcvarsall.bat" x86
           cd ${{ github.workspace }}\Trunk2016\Contribs\openssl
           perl Configure VC-WIN32 --prefix=${{ github.workspace }}\Trunk2016\Contribs\openssl\out
-          call ms\32all.bat
+          nmake
+          nmake install
 
       # -----------------------------------------------------------------------
       # 7. Build Qt 4.8.5
